Primeiro CRUD Scaffolding

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-4b65273b-f615-4cca-9f2f-fcc7d4fbecfc;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
